--- a/playbook.yml
+++ b/playbook.yml
@@ -3,11 +3,13 @@
   hosts: all
   tasks:
     - yum:
+        name: https://repo.rundeck.org/latest.rpm
+        state: present
+    - yum:
         name: "{{ item }}"
         state: present
       with_items:
         - java-1.8.0
-        - https://repo.rundeck.org/latest.rpm
         - rundeck
     - service:
         name: rundeckd  
